--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
+    "simple-git": "^3.27.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
