--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.2"
+  },
+  "engines": {
+    "node": "^22.6.0",
+    "npm": "^10.8.2"
   }
 }
