--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.77.2",
     "@trpc/client": "^11.1.4",
+    "@trpc/tanstack-react-query": "^11.1.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
