--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "git-db",
   "version": "1.0.0",
+  "packageManager": "npm@10.8.2",
   "workspaces": [
     "backend",
     "frontend"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "turbo run dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "turbo": "^2.5.4",
     "typescript": "^5.8.3"
   },
   "engines": {
