--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "packageManager": "npm@10.8.2",
   "workspaces": [
     "backend",
-    "frontend"
+    "frontend",
+    "packages/**"
   ],
   "scripts": {
-    "start": "turbo run dev"
+    "start": "turbo run dev",
+    "build": "turbo run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "turbo": "^2.5.4",
-    "typescript": "^5.8.3"
+    "turbo": "^2.5.4"
   },
   "engines": {
     "node": "^22.6.0",
