--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "git-db",
   "version": "1.0.0",
-  "packageManager": "npm@10.8.2",
+  "packageManager": "npm@11.4.1",
   "workspaces": [
     "api",
     "web",
@@ -19,7 +19,7 @@
     "turbo": "^2.5.4"
   },
   "engines": {
-    "node": "^22.6.0",
-    "npm": "^10.8.2"
+    "node": "22.16.0",
+    "npm": "11.4.1"
   }
 }
