--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@git-db/api": "*",
+    "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.77.2",
     "@trpc/client": "^11.1.4",
     "@trpc/tanstack-react-query": "^11.1.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
-    "@git-db/config": "*",
     "@eslint/js": "^9.25.0",
+    "@git-db/config": "*",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
