--- a/api/package.json
+++ b/api/package.json
@@ -23,10 +23,10 @@
     "zod": "^3.25.34"
   },
   "devDependencies": {
-    "@git-db/config": "^1.0.0",
+    "@git-db/config": "workspace:*",
     "@tsconfig/node22": "^22.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
-    "typescript": "^5.8.3"
+    "typescript": "catalog:"
   }
 }
