--- a/api/package.json
+++ b/api/package.json
@@ -13,20 +13,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@fastify/static": "^8.2.0",
     "@trpc/server": "^11.1.4",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "fastify": "^5.3.3",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.0.0",
     "simple-git": "^3.27.0",
     "ts-node": "^10.9.2",
     "zod": "^3.25.34"
   },
   "devDependencies": {
     "@git-db/config": "workspace:*",
-    "@tsconfig/node22": "^22.0.2",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.2",
     "typescript": "catalog:"
   }
 }
