--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "src/main.ts",
   "private": true,
-  "types": "./src/exports.d.ts",
+  "types": "./src/exports.ts",
   "scripts": {
     "bootstrap": "node --experimental-strip-types scripts/bootstrap.ts",
     "dev": "nodemon"
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/static": "^8.2.0",
+    "@fastify/websocket": "^11.1.0",
     "@trpc/server": "^11.1.4",
     "fastify": "^5.3.3",
     "nodemon": "^3.1.10",
