--- a/web/package.json
+++ b/web/package.json
@@ -19,12 +19,12 @@
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.8",
     "@eslint/js": "^9.25.0",
     "@git-db/config": "workspace:*",
+    "@tailwindcss/vite": "^4.1.8",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
